--- a/src/main/resources/templates/include/userBaseLayout.html
+++ b/src/main/resources/templates/include/userBaseLayout.html
@@ -54,7 +54,7 @@
                     <span style="font-size: 15px; position: relative; top: -23px;">주문하기</span>
                 </a>
 
-                <a href="cart.html">
+                <a href="cart">
                     <div class="tab-icon-wrapper">
                         <span class="tab-icon"><img src="/images/cart.png" alt="장바구니" width="40px" height="40px"></span>
                     </div>
