--- a/src/main/resources/templates/include/userBaseLayout.html
+++ b/src/main/resources/templates/include/userBaseLayout.html
@@ -19,7 +19,7 @@
                     <span class="logo-text"><img src="/images/자바빈로고 1.png" alt=""></span>
                 </div>
                 <div style="display: flex; align-items: center; gap: 10px;">
-                    <a href="#" style="text-decoration: none;">
+                    <a href="mypick" style="text-decoration: none;">
                         <img src="/images/heart.png" width="23px" height="23px" alt="찜" style="vertical-align: middle;">
                     </a>
                     <span class="notification-icon" id="notification-trigger">
@@ -37,7 +37,7 @@
 
         <div class="fixed-bottom">
             <nav class="tab-bar">
-                <a href="main">
+                <a href="/home/">
                     <div class="tab-icon-wrapper">
                         <span class="tab-icon"><img src="/images/home.png" alt="홈" width="40px" height="40px"></span>
                     </div>
@@ -51,21 +51,21 @@
                     <span>주문내역</span>
                 </a>
 
-                <a href="coffee.html" class="active">
+                <a href="coffee" class="active">
                     <div class="tab-icon-wrapper">
                         <span class="tab-icon"><img src="/images/coffee.png" alt="주문하기" width="50px" height="50px"></span>
                     </div>
                     <span style="font-size: 15px; position: relative; top: -23px;">주문하기</span>
                 </a>
 
-                <a href="cart.html">
+                <a href="cart">
                     <div class="tab-icon-wrapper">
                         <span class="tab-icon"><img src="/images/cart.png" alt="장바구니" width="40px" height="40px"></span>
                     </div>
                     <span>장바구니</span>
                 </a>
 
-                <a href="account.html">
+                <a href="account">
                     <div class="tab-icon-wrapper">
                         <span class="tab-icon"><img src="/images/mypage.png" alt="계정관리" width="40px" height="40px"></span>
                     </div>
