계정별 찜목록 활성화

--- a/src/main/resources/templates/admin_login.html
+++ b/src/main/resources/templates/admin_login.html
@@ -27,6 +27,13 @@
     </div>
 </th:block>
 
+<footer class="footer-nav">
+    <a href="#" class="footer-nav-item">메뉴 관리</a>
+    <a href="#" class="footer-nav-item" >주문 관리</a>
+    <a href="#" class="footer-nav-item">매출 관리</a>
+    <a href="#" class="footer-nav-item active">로그인</a>
+</footer>
+
 <script src="/js/admin_login.js"></script>
 </body>
 </html>
