--- a/src/main/resources/templates/admin_revenue.html
+++ b/src/main/resources/templates/admin_revenue.html
@@ -38,6 +38,13 @@
     </div>
 </th:block>
 
+<footer class="footer-nav">
+    <a href="menu" class="footer-nav-item">메뉴 관리</a>
+    <a href="orders" class="footer-nav-item">주문 관리</a>
+    <a href="revenue" class="footer-nav-item active">매출 관리</a>
+    <a href="login" class="footer-nav-item">로그인</a>
+</footer>
+
 <script>
     function loadData() {
 
@@ -71,6 +78,7 @@
             });
     }
 </script>
+
 
 </body>
 </html>
