--- a/src/main/resources/templates/admin_login.html
+++ b/src/main/resources/templates/admin_login.html
@@ -28,10 +28,10 @@
 </th:block>
 
 <footer class="footer-nav">
-    <a href="#" class="footer-nav-item">메뉴 관리</a>
-    <a href="#" class="footer-nav-item" >주문 관리</a>
-    <a href="#" class="footer-nav-item">매출 관리</a>
-    <a href="#" class="footer-nav-item active">로그인</a>
+    <a href="menu" class="footer-nav-item">메뉴 관리</a>
+    <a href="orders" class="footer-nav-item" >주문 관리</a>
+    <a href="revenue" class="footer-nav-item">매출 관리</a>
+    <a href="login" class="footer-nav-item active">로그인</a>
 </footer>
 
 <script src="/js/admin_login.js"></script>
