관리자 페이지 완성

--- a/src/main/resources/templates/admin_orders.html
+++ b/src/main/resources/templates/admin_orders.html
@@ -14,12 +14,7 @@
 <th:block th:replace="~{./include/adminBaseLayout :: setContent( ~{:: .wrap} ) }">
 
     <div class="wrap">
-        <div class="notification-icon" id="notification-trigger">
-            <div class="notification-popup" id="notification-popup">
-                <div class="popup-arrow"></div> <p>주문내역이 없습니다.</p>
-            </div>
-        </div>
-
+        <div id="center-toast" class="center-toast">새로운 주문이 도착했습니다!</div>
         <main class="main-content">
             <h2 class="main-title">주문 목록</h2>
 
@@ -235,12 +230,18 @@
         // 5. 알림 팝업
         // ---------------------------
         function showNotification(message) {
-            notificationPopup.querySelector('p').innerText = message;
-            notificationPopup.classList.add('show');
+            const toast = document.getElementById('center-toast');
 
+            // 메시지 설정 (필요 시)
+            if(message) toast.innerText = message;
+
+            // 보이게 하기
+            toast.classList.add('show');
+
+            // 2.5초 뒤에 사라지게 하기
             setTimeout(() => {
-                notificationPopup.classList.remove('show');
-            }, 3000);
+                toast.classList.remove('show');
+            }, 2000);
         }
 
         // ---------------------------
