--- a/src/main/resources/templates/include/adminBaseLayout.html
+++ b/src/main/resources/templates/include/adminBaseLayout.html
@@ -5,7 +5,7 @@
     <title>JavaBean Admin</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/admin_menu_management.css"> <!-- 공통 CSS -->
+    <link rel="stylesheet" href="/css/admin.css"> <!-- 공통 CSS -->
 </head>
 
 <th:block th:fragment="setContent(adminContent)">
