--- a/src/main/resources/templates/admin_login.html
+++ b/src/main/resources/templates/admin_login.html
@@ -16,7 +16,7 @@
 </header>
 <div class="wrap">
     <div class="login-container">
-        <form action="/admin/login" method="post">
+        <form action="/admin/perform_login_process" method="post">
             <label for="id">아이디</label>
             <input type="text" id="id" name="id" placeholder="아이디를 입력하세요" required>
 
